# fastuuid

./: .dockerignore  .travis.yml  Cargo.toml  Dockerfile  Pipfile  README.rst  build_or_release.sh  fastuuid.pyi  manylinux1.dockerfile  manylinux2010.dockerfile  manylinux2014.dockerfile  pyproject.toml  tox.ini
.cargo/: config.toml
.github/workflows/: ci-cd.yml  github_actions_security.yml  tox.yml
src/: lib.rs
tests/: conftest.py  test_benchmarks.py  test_uuid.py
