[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3

[project]
name = "fastuuid"
description = "Python bindings to Rust's UUID library."
dynamic = ["version"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Rust",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
maintainers = [
  {name = "Omer Katz", email = "omer.drow@gmail.com"}
]
requires-python = ">=3.8"
urls = { homepage = "https://github.com/thedrow/fastuuid/" }
